# uma-crypto-uniffi

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs
.github/workflows/: go.yml  publish_python.yml  release.yml  test_python.yml
src/: crypto.rs  lib.rs  uma_crypto.udl
uma-crypto-go/: crypto.go  go.mod
uma-crypto-go/internal/: uma_crypto.go
uma-crypto-go/test/: crypto_test.go
uma-crypto-kotlin/uniffi/uma_crypto/: UmaCrypto.kt
uma-crypto-python/: MANIFEST.in  README.md  setup.py
uma-crypto-python/scripts/: generate-linux-arm64.sh  generate-linux.sh  generate-macos-arm64.sh  generate-macos-x86_64.sh  generate-windows.sh
uma-crypto-python/src/uma_crypto/: __init__.py
