[package]
name = "uma-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
uniffi = "0.23.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
ecies = { "version" = "0.2.7", default-features = false, features = ["pure"]}
libsecp256k1 = "0.7.1"
bitcoin_hashes = "0.14.0"
bech32 = "0.11.0"

[features]
default = ["uniffi/cli"]

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "uma_crypto"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
